# AI_knowledge

app/: Readme.md  pyproject.toml
app/src/: main.py
